<resources>
    <string name="app_name">Holy Seat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="review_label">Reviews</string>
    <string name="check_in_label">Check-ins</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="room_type">Room Type: </string>
    <string name="toilet_type">Toilet Type: </string>
    <string name="check_in_button">Check-in</string>
    <string name="add_review_button">Add Review</string>
    <string name="rating">Rating:</string>
    <string name="reviewer">Reviewer:</string>
    <string name="date_posted">Date Posted:</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
    <string name="clear_image">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="check_in">checked in at</string>
    <string name="reviewed">reviewed</string>
    <string name="navDrawerOpen">Open Navigation Drawer</string>
    <string name="navDrawerClose">Close Navigation Drawer</string>
    <string name="register_label">Create an account</string>
    <string name="login_label">Welcome back!</string>
    <string name="email_user_label">Email/Username</string>
    <string name="email_label">Email</string>
    <string name="name_label">Display Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="has_account1">Already have an account?</string>
    <string name="has_account2"><u>Log in here.</u></string>
    <string name="no_account1">Don\'t have an account?</string>
    <string name="no_account2"><u>Register here.</u></string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Log In</string>
    <string name="profile_edit_label1">Edit Profile Information</string>
    <string name="profile_edit_label2">Edit Profile Credentials</string>
    <string name="rating_label">Rating</string>
    <string name="review_details_label">Review Details (Optional)</string>
    <string name="image_label">Image (Optional)</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZ2FibWluYW1lZGV6IiwiYSI6ImNrc2U4MGhncjB1dWQycW80NDR5MGhrZXgifQ.5dexgQO85m0cSglz3WpGOA</string>
    <string name="no_location">Location services not permitted by user.</string>
    <string name="delete_review_prompt">Are you sure you want to delete this review?</string>
    <string name="logout_prompt">Are you sure you want to log out?</string>
    <string name="edit_review_prompt1">Are you sure you want to edit this review?</string>
    <string name="edit_review_prompt2">Your upvotes obtained will be reset.</string>
    <string name="edit_profile_prompt">Are you sure you want to apply these changes?</string>
    <string name="error_email">Invalid email.</string>
    <string name="error_email_exist">This email has already been registered.</string>
    <string name="error_display">Display name must be alphabetic characters only.</string>
    <string name="error_user">Username must contain at least 6 characters.</string>
    <string name="error_user_unique">Username must be unique.</string>
    <string name="error_pass1">Password must have at least 8 characters.</string>
    <string name="error_pass2">Passwords don"'"t match.</string>
    <string name="error_login">Invalid credentials. Input a valid email/username and password.</string>
    <string name="no_review_details">You have not placed any details in your review. Do you want to continue adding it?</string>
    <string name="checkin_prompt">Would you like to add a review?</string>
    <string name="no_thanks">No thanks</string>
    <string name="view_toilet_details">View Toilet Details</string>
    <string name="filter_toilet">Filter Toilets</string>
    <string name="min_rating">0</string>
    <string name="max_rating">5</string>
    <string name="no_reviews">No reviews have been posted.</string>
    <string name="no_activities">No activities created yet.</string>
    <string name="no_activities_reviews">No reviews created yet.</string>
    <string name="no_activities_checkins">No check-ins created yet.</string>
    <string-array name="roomTypeItems">
        <item>All Rooms</item>
        <item>Female</item>
        <item>Male</item>
        <item>Ungendered</item>
    </string-array>
    <string-array name="toiletTypeItems">
        <item>All Toilets</item>
        <item>Flushing Toilet</item>
        <item>One-Piece Toilet</item>
        <item>Two-Piece Toilet</item>
        <item>Upflush Toilet</item>
        <item>Small Compact Toilet</item>
        <item>Corner Toilet</item>
        <item>Wall Mounted Toilet</item>
        <item>Square Toilet</item>
        <item>Elongated Toilet</item>
        <item>Round Bowl Toilet</item>
        <item>Tankless Toilet</item>
        <item>Composting Toilet</item>
        <item>Portable Toilet</item>
        <item>Pressure-Assisted Toilet</item>
        <item>Gravity Toilet</item>
        <item>Touchless Toilet Toilet</item>
        <item>Pull Chain Toilet</item>
        <item>Water-Saving Toilet</item>
        <item>Dual-Flush Toilet</item>
        <item>Comfort Height Toilet</item>
        <item>Expensive Toilet</item>
    </string-array>
    <string name="filter_room_label">Room Type</string>
    <string name="filter_toilet_label">Toilet Type</string>
    <string name="filter_rating_label">Minimum Average Rating</string>
    <string name="nearest_toilets_label">Toilets Near You</string>
</resources>