<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/alabaster"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/toiletLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/toilet" />

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_bold"
                android:text="@string/app_name"
                android:textColor="@color/midnight"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toiletLogo" />

            <TextView
                android:id="@+id/profileEditLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rambla_bold"
                android:text="@string/register_label"
                android:textColor="@color/midnight"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerTitle" />

            <LinearLayout
                android:id="@+id/registerForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileEditLabel2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailRegisterInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/email_label"
                    app:boxBackgroundColor="@color/off_white"
                    app:boxStrokeColor="@color/midnight"
                    app:hintTextColor="@color/midnight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/error_email"
                    android:textColor="@color/error_red"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameRegisterInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/name_label"
                    app:boxBackgroundColor="@color/off_white"
                    app:boxStrokeColor="@color/midnight"
                    app:hintTextColor="@color/midnight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerDisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/error_display"
                    android:textColor="@color/error_red"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameRegisterInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/username_label"
                    app:boxBackgroundColor="@color/off_white"
                    app:boxStrokeColor="@color/midnight"
                    app:hintTextColor="@color/midnight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/error_user"
                    android:textColor="@color/error_red"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordRegisterInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/password_label"
                    app:boxBackgroundColor="@color/off_white"
                    app:boxStrokeColor="@color/midnight"
                    app:hintTextColor="@color/midnight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorPass1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/error_pass1"
                    android:textColor="@color/error_red"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password2RegisterInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/confirm_password_label"
                    app:boxBackgroundColor="@color/off_white"
                    app:boxStrokeColor="@color/midnight"
                    app:hintTextColor="@color/midnight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerConfirmPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorPass2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/error_pass2"
                    android:textColor="@color/error_red"
                    android:textSize="10sp"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/cerulean"
                android:fontFamily="@font/rambla_bold"
                android:text="@string/register_btn"
                android:textColor="@color/off_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerForm" />

            <TextView
                android:id="@+id/hasAccount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/has_account1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

            <TextView
                android:id="@+id/hasAccount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lato"
                android:text="@string/has_account2"
                android:textColor="@color/midnight"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hasAccount1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>