<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/checkin_prompt"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/rambla_bold"
            android:minWidth="60dip"
            android:minHeight="30dip"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnCheckinAddReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cerulean"
            android:fontFamily="@font/rambla_bold"
            android:minWidth="60dip"
            android:minHeight="30dip"
            android:text="@string/add_review_button"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>