<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:text="@string/delete_review_prompt"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cerulean"
            android:fontFamily="@font/rambla_bold"
            android:minWidth="60dip"
            android:minHeight="30dip"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/rambla_bold"
            android:minWidth="60dip"
            android:minHeight="30dip"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>